Changelog
=========

1.3 - unreleased
----------------


1.2 - 2011-03-15
----------------

- Sent all data over the socket instead of only the first buffer.
  [hannosch]

- Added error logging for failed scans.
  [hannosch]

1.1 - 2011-02-15
----------------

- Disable virus validator during debug mode but log a warning. This allows
  local development to take place without having clamav installed.
  [hannosch]

1.0 - 2011-01-11
----------------

- Reengineering to support images.
  [hannosch]

- Improve coverage and use plone.app.testing.
  [ggozad]

- Plone 4 compatibility.
  [ggozad, hannosch]

- pep-8
  [ggozad]

1.0b2
-----

- Added support for local UNIX sockets
  [ggozad]

1.0b1
-----

- Initial release
  [ggozad]