@@ -2,6 +2,7 @@
     xmlns="http://namespaces.zope.org/zope"
     xmlns:five="http://namespaces.zope.org/five"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    xmlns:zcml="http://namespaces.zope.org/zcml"
     i18n_domain="collective.ATClamAV">
 
     <utility factory=".scanner.ClamAVScanner" />
@@ -14,6 +15,11 @@
     <adapter
       name="collective.ATClamAV.image"
       factory=".schema.VirusFreeATImageModifier" />
+    
+    <adapter
+      zcml:condition="installed z3c.form"
+      factory=".validator.Z3CFormClamAVValidator"
+      />
 
     <genericsetup:registerProfile
       name="default"
