@@ -4,6 +4,8 @@ Changelog
 1.3 - unreleased
 ----------------
 
+- Add z3c.form validator to check files uploaded via plone.formwidget.namedfile.
+  [davisagli]
 
 1.2 - 2011-03-15
 ----------------
